--- a/pom.xml
+++ b/pom.xml
@@ -25,11 +25,16 @@
       <artifactId>camunda-bpm-spring-boot-starter</artifactId>
       <version>3.4.2</version>
     </dependency>
-    <dependency>
+    <!--<dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
+      <version>1.4.200</version>
+    </dependency>-->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>42.2.14</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -39,8 +44,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-
-
   </dependencies>
 
   <build>
