--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,22 @@
+spring:
+  datasource:
+    continue-on-error: true
+    #url: jdbc:h2:mem:myDB
+    #url: jdbc:h2:file:C:/dockerVolume/Spring_DB
+    url: jdbc:postgresql://localhost:5432/Spring_Boot
+    password: postgres
+    username: postgres
+    #driver-class-name: org.h2.Driver
+    driverClassName: org.postgresql.Driver
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+      show-sql: true
+    properties:
+      hibernate:
+        #dialect: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 camunda.bpm.admin-user:
   id: demo
   password: demo
